--- a/pycon_project/locale/zh_TW/LC_MESSAGES/django.po
+++ b/pycon_project/locale/zh_TW/LC_MESSAGES/django.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2012-05-28 23:28+0800\n"
+"POT-Creation-Date: 2012-12-14 23:10+0800\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -131,8 +131,8 @@ msgstr ""
 #: symposion/proposals/models.py:57
 msgid ""
 "'Extreme' talks are advanced talks with little or no introductory material. "
-"See <a href='http://us.pycon.org/2012/speaker/extreme/' "
-"target='_blank'>http://us.pycon.org/2012/speaker/extreme/</a> for details."
+"See <a href='http://us.pycon.org/2013/speaker/extreme/' "
+"target='_blank'>http://us.pycon.org/2013/speaker/extreme/</a> for details."
 msgstr ""
 
 #: symposion/proposals/models.py:59
@@ -326,35 +326,35 @@ msgstr "關於"
 msgid "Program"
 msgstr "議程"
 
-#: templates/_nav.html:24 templates/speakers/base.html:6
-msgid "Speakers"
-msgstr "講者"
-
-#: templates/_nav.html:27 templates/pycon/registration.html:4
-msgid "Registration"
-msgstr "註冊"
-
-#: templates/_nav.html:30 templates/venue/base.html:7
-#: templates/venue/base.html.py:16
-msgid "Venue"
-msgstr "地點"
-
-#: templates/_nav.html:33 templates/sponsors/base.html:4
+#: templates/_nav.html:24 templates/sponsors/base.html:4
 #: templates/sponsors/base.html.py:11 templates/sponsors/list.html:10
 msgid "Sponsors"
 msgstr "贊助商"
+
+#: templates/_nav.html:27 templates/speakers/base.html:6
+msgid "Speakers"
+msgstr "講者"
+
+#: templates/_nav.html:30 templates/pycon/registration.html:4
+msgid "Registration"
+msgstr "註冊"
+
+#: templates/_nav.html:33 templates/venue/base.html:7
+#: templates/venue/base.html.py:16
+msgid "Venue"
+msgstr "地點"
 
 #: templates/_nav.html:36 templates/biblion/blog_base.html:11
 msgid "Blog"
 msgstr "部落格"
 
 #: templates/base.html:55
-msgid "6/9 ~ 6/10"
-msgstr "六月9日 ~ 六月10日"
+msgid "May 25-26"
+msgstr "5月25日-26日"
 
 #: templates/base.html:56
-msgid "Humanities & Social Sciences Building, Academia Sinica"
-msgstr "中央研究院人文社會館"
+msgid "Academia Sinica, Taipei"
+msgstr "中央研究院"
 
 #: templates/homepage.html:27
 msgid "What is PyCon?"
@@ -1050,6 +1050,12 @@ msgstr ""
 #, python-format
 msgid "History for %(slug)s"
 msgstr ""
+
+#~ msgid "6/9 ~ 6/10"
+#~ msgstr "六月9日 ~ 六月10日"
+
+#~ msgid "Humanities & Social Sciences Building, Academia Sinica"
+#~ msgstr "中央研究院人文社會館"
 
 #~ msgid "Building of Humanity and Social Sciences"
 #~ msgstr "中央研究院人文社會館"
