--- a/pycon_project/locale/zh_TW/LC_MESSAGES/django.po
+++ b/pycon_project/locale/zh_TW/LC_MESSAGES/django.po
@@ -353,9 +353,17 @@ msgstr "部落格"
 msgid "Academia Sinica: Humanities and Social Sciences Building on May 25 - 26"
 msgstr "中央研究院人文社會科學館 5月25-26日"
 
-#: templates/homepage.html:68
+#: templates/homepage.html:40
 msgid "Sponsors!"
 msgstr "熱情的贊助商"
+
+#: templates/homepage.html:46
+msgid "Sponsor PyConTW 2013!"
+msgstr "贊助 PyConTW 2013！"
+
+#: templates/homepage.html:46 templates/homepage.html:50
+msgid "/2013/en/blog/2012/11/21/how-to-pycon-taiwan-en/"
+msgstr "/2013/zh-tw/blog/2012/11/21/how-to-pycon-taiwan-zh/"
 
 #: templates/account/_openid_login.html:23 templates/account/login.html:42
 msgid "Log in &raquo;"
