--- a/pycon_project/locale/zh/LC_MESSAGES/django.po
+++ b/pycon_project/locale/zh/LC_MESSAGES/django.po
@@ -368,6 +368,10 @@ msgstr "部落格"
 msgid "Academia Sinica: Humanities and Social Sciences Building on May 25 - 26"
 msgstr "中央研究院人文社會科學館 5月25-26日"
 
+#: templates/homepage.html:35
+msgid "intro-en"
+msgstr "intro-zh"
+
 #: templates/homepage.html:41
 msgid "Sponsors!"
 msgstr "熱情的贊助商"
